<resources>
    <string name="app_name">Registration App</string>
    <string name="tv1">Registration Form</string>
    <string name="tv2">Welcome to Adventure Learning Club!</string>
    <string name="tv3">Full Name</string>
    <string name="tv4">Gender</string>
    <string name="tv5">Student ID</string>
    <string name="tv6">School</string>
    <string name="tv7">E-mail</string>
    <string name="tv8">Phone</string>
    <string name="et1">First Name</string>
    <string name="et2">Name</string>
    <string name="bt1">Register</string>
    <string name="rb1">Male</string>
    <string name="bt2">Female</string>
</resources>