<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="33dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/tv1"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv2"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#c0c0c0"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/spacing2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/tv3"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:background="@drawable/background"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingRight="10dp"
                android:text="@string/et1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:background="@drawable/background"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/et2"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/spacing3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv4"
                android:textColor="@color/black" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/rb1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:text="@string/bt2" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/spacing4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv5"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextNumberPassword"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/background"
                android:ems="10"
                android:inputType="numberPassword"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/spacing5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv6"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/background"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/spacing6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv7"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/background"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/spacing7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv8"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/background"
                android:ems="10"
                android:inputType="phone"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/spacing8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt1"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>